--- a/apps/my-blog2/src/assets/style/normalize.less
+++ b/apps/my-blog2/src/assets/style/normalize.less
@@ -88,8 +88,9 @@ button,
 input,
 textarea {
   -webkit-appearance: none;
-  font-family: "Microsoft YaHei", sans-serif, "Helvetica Neue", Helvetica,
-    Arial, "黑体", "宋体", Arial;
+  font-family:
+    "Microsoft YaHei", sans-serif, "Helvetica Neue", Helvetica, Arial, "黑体",
+    "宋体", Arial;
   border: 0;
   margin: 0;
   padding: 0;
@@ -284,6 +285,7 @@ select:-webkit-autofill {
     line-height: 1.5rem;
     overflow: auto;
     max-height: 500px;
+    @apply my-2;
   }
 
   p {
