--- a/apps/my-blog2/src/assets/style/theme.less
+++ b/apps/my-blog2/src/assets/style/theme.less
@@ -80,6 +80,19 @@ a {
   }
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid @table-border-color;
+  width: 100%;
+
+  th,
+  td {
+    border: 1px solid @table-border-color;
+    padding: 8px;
+  }
+}
+
 .aside-right .navigation .subnavigation li a {
   border: none;
 }
