--- a/apps/my-blog2/src/assets/style/variable.less
+++ b/apps/my-blog2/src/assets/style/variable.less
@@ -33,3 +33,4 @@
 @copy-btn-bg-hover-color: rgb(52, 56, 72);
 @all-demo-tags-border-color: #ccc;
 @kbd-border-color: rgba(63, 63, 63, 0.25);
+@table-border-color: #ccc;
