--- a/apps/my-blog2/src/assets/style/variable.less
+++ b/apps/my-blog2/src/assets/style/variable.less
@@ -25,7 +25,8 @@
 @link-color: rgba(23, 133, 207, 0.85);
 @navigation-default-border-color: #e5e7eb;
 @navigation-active-border-color: rgba(23, 133, 207, 1);
-@p-code-bg-color: #dbd9d7fb;
+@p-code-bg-color: #fff5f5;
+@p-code-color: #ff502c;
 @global-search-bg-color: #f5f6f7;
 @global-search-boxshadow-color1: #ffffff80;
 @global-search-boxshadow-color2: #555a64;
