--- a/apps/my-blog2/src/assets/style/normalize.less
+++ b/apps/my-blog2/src/assets/style/normalize.less
@@ -362,16 +362,21 @@ select:-webkit-autofill {
   font-size: 1.2rem;
 
   ul {
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-indent: 1rem;
 
     ul {
-      font-size: 0.8rem;
+      font-size: 1rem;
       text-indent: 2rem;
 
       ul {
-        font-size: 0.6rem;
+        font-size: 0.9rem;
         text-indent: 3rem;
+
+        ul {
+          font-size: 0.8rem;
+          text-indent: 4rem;
+        }
       }
     }
   }
