add bfc article

--- a/apps/my-react-app/src/App.css
+++ b/apps/my-react-app/src/App.css
@@ -2,3 +2,19 @@
   color: red;
   font-size: 24px;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
